--- a/ReleaseMPI/makefile
+++ b/ReleaseMPI/makefile
@@ -9,7 +9,7 @@ CC := /home/xgo/local/bin/mpiCC
 
 # All of the sources participating in the build are defined here
 -include sources.mk
--include srcOpenMP/subdir.mk
+-include src/subdir.mk
 -include subdir.mk
 -include objects.mk
 
